--- a/input.conf
+++ b/input.conf
@@ -4,15 +4,12 @@
 4 change-list script-opts append ruler-scale=25
 5 change-list script-opts append ruler-max_size=20,20
 
-#SPACE repeatable playlist-next
-#alt+SPACE repeatable playlist-prev
+LEFT  repeatable playlist-prev
+RIGHT repeatable playlist-next
+PGUP  repeatable seek -10
+PGDWN repeatable seek  10
 
-# UP ignore
-# DOWN ignore
-# LEFT repeatable playlist-prev
-# RIGHT repeatable playlist-next
-PGUP repeatable playlist-prev
-PGDWN repeatable playlist-next
+k cycle pause
 
 # simple reminder of default bindings
 #1 add contrast -1
