--- a/mpv.conf
+++ b/mpv.conf
@@ -11,16 +11,6 @@ sigmoid-upscaling
 # black
 background=0
 
-# ## MISC
-# mute=yes
-# # the osc is mostly useful for videos
-# osc=no
-# # don't try to autoload subtitles or audio files
-# sub-auto=no
-# audio-file-auto=no
-# # get rid of the useless V: 00:00:00 / 00:00:00 line
-# term-status-msg=
-
 # replace mpv with mvi in the window title
 title="[${playlist-pos-1}/${playlist-count}] ${?media-title:${media-title}}${!media-title:No file} - mpv"
 
@@ -37,15 +27,20 @@ window-dragging=no
 osd-font='Iosevka Fixed'
 geometry=50%
 
+osc=yes
+
 #according to haasn, aspect ratio info for PNG and JPG is "universally bust"
 [extension.png]
 video-aspect-override=no
+osc=no
 
 [extension.jpg]
 video-aspect-override=no
+osc=no
 
 [extension.jpeg]
 profile=extension.jpg
+osc=no
 
 [silent]
 msg-level=all=no
