--- a/input.conf
+++ b/input.conf
@@ -1,9 +1,3 @@
-1 change-list script-opts append image_positioning-drag_to_pan_margin=200
-2 change-list script-opts append ruler-exit_bindings=8
-3 change-list script-opts append ruler-line_color=FF
-4 change-list script-opts append ruler-scale=25
-5 change-list script-opts append ruler-max_size=20,20
-
 LEFT  repeatable playlist-prev
 RIGHT repeatable playlist-next
 PGUP  repeatable seek -10
@@ -98,9 +92,11 @@ A cycle-values video-aspect-override "-1" "no"
 
 p script-message force-print-filename
 
+alt+x script-message menu
+DEL script-message menu-del
+
 # ADVANCED: you can define bindings that belong to a "section" (named "image-viewer" here) like so:
 #alt+SPACE {image-viewer} repeatable playlist-prev
 #SPACE     {image-viewer} repeatable playlist-next
 # to load them conditionally with a command. See scripts-opts/image_viewer.conf for how you can do this
 
-alt+x run sh -c "echo '${path}' | ~/.dotfiles/configs/sxiv-key-handler.sh C-x"
