--- a/input.conf
+++ b/input.conf
@@ -39,6 +39,7 @@ wheel_down    script-message cursor-centric-zoom -0.1
 alt+x  script-message menu
 DEL    script-message menu Delete
 ctrl+p script-message menu Print
+ctrl+d script-message menu "Drag and drop"
 
 # directions
 h     no-osd vf toggle hflip; show-text "Horizontal flip"
